# semantic-photos

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements-cuda.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
semantic_photos/: app.py  build.py  constants.py  geographies.py  utils.py
semantic_photos/galleries/: database.py
semantic_photos/models/: __init__.py  caption.py  documents.py  schema.py  utils.py
